Update Recap page to #990

--- a/recap.html
+++ b/recap.html
@@ -8163,6 +8163,86 @@
                         <td align="left" valign="top">Canada experienced "Trudeaumania" in the late 1960s and early 1970s, a wave of excitement sparked by Pierre Trudeau, the charismatic leader of the Liberal Party. With his progressive policies, youthful energy, and charm, Trudeau became a symbol of change and modernity during a transformative period in Canadian history. His rise to power as Prime Minister in 1968 captivated Canadians from coast to coast. "Trudeaumania" saw fans attending packed rallies, sporting Trudeau-inspired fashion, and collecting buttons and memorabilia. This phenomenon left a lasting impact on Canadian politics and culture, marking a unique and spirited chapter in the nation's political history.</td>
                         <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1880996348251513080" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
                      </tr>
+                     <tr>
+                        <td valign="top" align="center">981</td>
+                        <td valign="top" align="center">Jan 19, 2025</td>
+                        <td valign="top" align="center"><strong>PETTY</strong><br>🏘️🎣🌊</td>
+                        <td align="center" valign="top">4.21</td>
+                        <td align="left" valign="top"><a href="http://www.pettyharbourmaddoxcove.ca/" target="_blank">Petty Harbour-Maddox Cove</a> is a picturesque fishing village located on the eastern shore of Newfoundland and Labrador, just south of St. John's. This charming community is known for its colourful row houses, stunning coastal views, and rich maritime history. Petty Harbour is not only a haven for fishermen but also a popular spot for tourists seeking to experience Newfoundland's natural beauty and vibrant culture. The village has been featured in various films and television shows, showcasing its stunning landscapes and traditional fishing practices.</td>
+                        <td valign="top" align="center"><a href="URL" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">982</td>
+                        <td valign="top" align="center">Jan 20, 2025</td>
+                        <td valign="top" align="center"><strong>THORN</strong><br>🌹</td>
+                        <td align="center" valign="top">3.54</td>
+                        <td align="left" valign="top">Canada has a deep-rooted love for roses, particularly the hardy Canadian Explorer rose series, developed to withstand cold winters. The <a href="https://canadianrosesociety.org/" target="_blank">Canadian Rose Society</a>, founded in 1946, promotes the appreciation and cultivation of roses across the country. Thorny roses are celebrated at the annual "Festival of Roses" held at Montréal Botanical Garden, which showcases hundreds of beautiful rose varieties. While roses have their thorns, they are a symbol of perseverance and beauty, much like the spirit of Canadian gardeners who cultivate them in challenging climates.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1881686010284679403" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">983</td>
+                        <td valign="top" align="center">Jan 21, 2025</td>
+                        <td valign="top" align="center"><strong>SEDGE</strong><br>🦢🌾</td>
+                        <td align="center" valign="top">4.96</td>
+                        <td align="left" valign="top">In Canada, marshy areas known as sedges are important habitats for wildlife, especially for cranes! The term "sedge" not only refers to grassy wetlands but also to a group of cranes gathering in these lush areas. Canada is home to two species of cranes - the Sandhill Crane and the endangered Whooping Crane. Each fall, Sandhill Cranes flock to Canadian wetlands, where sedges provide the perfect mix of cover and food as they prepare for migration. These crane gatherings are a beautiful sight, showcasing how Canada’s diverse ecosystems support unique wildlife year-round.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1882040198147514420" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">984</td>
+                        <td valign="top" align="center">Jan 22, 2025</td>
+                        <td valign="top" align="center"><strong>TUYAS</strong><br>🌋🧊</td>
+                        <td align="center" valign="top">5.58</td>
+                        <td align="left" valign="top">A tuya is a rare type of volcano with a flat top and steep sides, formed when lava erupts through a thick glacier or ice sheet. These unique formations are found in regions where glaciers and volcanic activity occurred simultaneously. One of the most notable tuya regions is the Tuya Volcanic Field in far northern British Columbia, near the border with the Yukon. This area, centered around the Tuya Range, showcases some of the best examples of tuyas in the world.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1882410819134144967" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">985</td>
+                        <td valign="top" align="center">Jan 23, 2025</td>
+                        <td valign="top" align="center"><strong>SHAKE</strong><br><img src="images/recap/shake.jpg"></td>
+                        <td align="center" valign="top">4.70</td>
+                        <td align="left" valign="top">Did you know Canada has an island that literally shakes? Tremble Island, located in British Columbia’s Seymour Inlet, experiences a phenomenon where the ground quivers due to the power of the water currents surrounding it. This inlet has some of the fastest tidal surges in the world, and at peak tides, the force of the water is so intense that it causes the entire island to tremble! Visitors to Tremble Island are in for a unique (and slightly shaky) experience, showcasing the raw power of Canada’s incredible natural landscapes.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1882784257619145173" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">986</td>
+                        <td valign="top" align="center">Jan 24, 2025</td>
+                        <td valign="top" align="center"><strong>QUAIL</strong><br>🐦</td>
+                        <td align="center" valign="top">4.14</td>
+                        <td align="left" valign="top">Did you know that Canada is home to three fascinating types of quail: the California Quail, the Mountain Quail, and the Northern Bobwhite! These tiny birds bring big personality, whether it’s the California Quail’s fancy feather plume, the Mountain Quail’s love for sneaky hideouts, or the Northern Bobwhite’s cheerful “bob-WHITE!” call. From British Columbia’s grassy hills to Ontario’s fields, these quail are proof that even small birds can make a big impression. These small but mighty birds are a rare treat to see in the Canadian wild, so keep your binoculars handy next time you're exploring their habitats!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1883142197077266688" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">987</td>
+                        <td valign="top" align="center">Jan 25, 2025</td>
+                        <td valign="top" align="center"><strong>SWILE</strong><br>🦭</td>
+                        <td align="center" valign="top">4.90</td>
+                        <td align="left" valign="top">In Newfoundland and Labrador, "swile" is a traditional word for a seal, reflecting the deep connection between the province's culture and its marine environment. For centuries, seals have been an essential part of life along Canada's east coast, providing food, oil, and clothing to early settlers and Indigenous communities. Today, the connection to swiles endures, with Newfoundland and Labrador offering breathtaking opportunities to observe seals in their natural habitat along Canada's rugged Atlantic coast.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1883495827877847073" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">988</td>
+                        <td valign="top" align="center">Jan 26, 2025</td>
+                        <td valign="top" align="center"><strong>MUDDY</strong><br>🌄</td>
+                        <td align="center" valign="top">4.33</td>
+                        <td align="left" valign="top">The <a href="https://greatsouthwest.ca/big-muddy/" target="_blank">Big Muddy Badlands</a> in southwestern Saskatchewan are a breathtaking mix of rugged beauty and rich history. Nestled within the Big Muddy Valley, this unique landscape features striking cliffs, hoodoos, and winding trails shaped by millennia of erosion. At the heart of the region lies Big Muddy Lake, a shallow, picturesque body of water that complements the area's stark, otherworldly charm. This hidden gem offers visitors a chance to explore Saskatchewan’s dramatic geography and learn about the deep cultural significance of the land to Indigenous peoples. It's a truly muddy marvel waiting to be discovered!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1883851150681600122" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">989</td>
+                        <td valign="top" align="center">Jan 27, 2025</td>
+                        <td valign="top" align="center"><strong>KIOSK</strong><br>🖥️🛂</td>
+                        <td align="center" valign="top">4.58</td>
+                        <td align="left" valign="top">If you’ve flown internationally into Canada, you’ve likely used a CBSA Primary Inspection Kiosk! Operated by the Canada Border Services Agency (CBSA), which oversees border management and security, these kiosks have streamlined the arrival process since their introduction in 2017. Travellers can scan their passports, snap a quick photo, and complete their customs declarations digitally. Found in major airports across Canada, they help reduce wait times and enhance efficiency while maintaining Canada’s high standards for border security.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1884228038814048676" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">990</td>
+                        <td valign="top" align="center">Jan 28, 2025</td>
+                        <td valign="top" align="center"><strong>JACKS</strong><br>🪓🪵</td>
+                        <td align="center" valign="top">5.96</td>
+                        <td align="left" valign="top">Lumberjacks hold a legendary place in Canadian history, pivotal to the booming timber industry of the 19th and early 20th centuries. Among the most celebrated was Joseph "Jos" Montferrand, a French-Canadian logger and strongman from Quebec. Montferrand earned folk hero status for his remarkable strength and his fearless defence of fellow workers, and was the inspiration for the legendary Ottawa Valley figure Big Joe Mufferaw. Today, the enduring image of the plaid-clad lumberjack with an axe is a proud symbol of Canada’s rugged and resilient heritage.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1884583554836828627" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
 
 
 
@@ -9262,6 +9342,17 @@
                   <tr><td align="center" valign="top">978</td><td align="center" valign="top"><strong>SANDY</strong></td></tr>
                   <tr><td align="center" valign="top">979</td><td align="center" valign="top"><strong>COACH</strong></td></tr>
                   <tr><td align="center" valign="top">980</td><td align="center" valign="top"><strong>MANIA</strong></td></tr>
+
+                  <tr><td align="center" valign="top">981</td><td align="center" valign="top"><strong>PETTY</strong></td></tr>
+                  <tr><td align="center" valign="top">982</td><td align="center" valign="top"><strong>THORN</strong></td></tr>
+                  <tr><td align="center" valign="top">983</td><td align="center" valign="top"><strong>SEDGE</strong></td></tr>
+                  <tr><td align="center" valign="top">984</td><td align="center" valign="top"><strong>TUYAS</strong></td></tr>
+                  <tr><td align="center" valign="top">985</td><td align="center" valign="top"><strong>SHAKE</strong></td></tr>
+                  <tr><td align="center" valign="top">986</td><td align="center" valign="top"><strong>QUAIL</strong></td></tr>
+                  <tr><td align="center" valign="top">987</td><td align="center" valign="top"><strong>SWILE</strong></td></tr>
+                  <tr><td align="center" valign="top">988</td><td align="center" valign="top"><strong>MUDDY</strong></td></tr>
+                  <tr><td align="center" valign="top">989</td><td align="center" valign="top"><strong>KIOSK</strong></td></tr>
+                  <tr><td align="center" valign="top">990</td><td align="center" valign="top"><strong>JACKS</strong></td></tr>
 
                </tbody>
             </table>
