Update Recap page to #1000

--- a/recap.html
+++ b/recap.html
@@ -8243,6 +8243,86 @@
                         <td align="left" valign="top">Lumberjacks hold a legendary place in Canadian history, pivotal to the booming timber industry of the 19th and early 20th centuries. Among the most celebrated was Joseph "Jos" Montferrand, a French-Canadian logger and strongman from Quebec. Montferrand earned folk hero status for his remarkable strength and his fearless defence of fellow workers, and was the inspiration for the legendary Ottawa Valley figure Big Joe Mufferaw. Today, the enduring image of the plaid-clad lumberjack with an axe is a proud symbol of Canada’s rugged and resilient heritage.</td>
                         <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1884583554836828627" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
                      </tr>
+                     <tr>
+                        <td valign="top" align="center">991</td>
+                        <td valign="top" align="center">Jan 29, 2025</td>
+                        <td valign="top" align="center"><strong>REEVE</strong><br>🎩🏛️📜</td>
+                        <td align="center" valign="top">4.94</td>
+                        <td align="left" valign="top">In Canada, a reeve is the head of a rural or small-town municipal council, similar to a mayor. The role dates back to the early days of local governance when reeves presided over townships to oversee taxes, infrastructure, and community concerns. While fewer communities use the term today, reeves remain an important part of rural governance in some provinces, connecting modern leadership to Canada's history. Of course, the most famous of all the reeves in Canada is actor Keanu Reeves - but he enforces justice in a very different way!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1884955108116406346" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">992</td>
+                        <td valign="top" align="center">Jan 30, 2025</td>
+                        <td valign="top" align="center"><strong>TUNIC</strong><br>👮🔴🐴</td>
+                        <td align="center" valign="top">3.90</td>
+                        <td align="left" valign="top">Did you know that the RCMP's red serge tunic is a symbol of Canadian pride and history? Introduced in the 1870s, the red tunic was part of the uniform for the North-West Mounted Police, the RCMP's predecessor. The bold colour was chosen for its high visibility and as a symbol of authority and strength. Over time, the red serge became a lasting emblem of the RCMP's commitment to service and law enforcement across Canada. Today, it remains an iconic part of their ceremonial dress and is instantly recognized worldwide as a representation of Canada's national identity.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1885310199428210895" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                      <tr>
+                        <td valign="top" align="center">993</td>
+                        <td valign="top" align="center">Jan 31, 2025</td>
+                        <td valign="top" align="center"><strong>WIRED</strong><br>☎️🔗🖥️</td>
+                        <td align="center" valign="top">4.76</td>
+                        <td align="left" valign="top">Canada's early internet networks relied on being wired to telephone lines and later advanced to fibre optics, connecting the nation's vast geography. In 1984, NetNorth, Canada's first digital network, linked universities using dial-up lines, allowing researchers to exchange data across provinces. This wired system laid the foundation for CA*net in 1990, Canada's first national internet backbone, which revolutionized communication and collaboration across the country. From these humble beginnings, Canada's internet infrastructure has grown into one of the most advanced in the world!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1885680693617074471" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">994</td>
+                        <td valign="top" align="center">Feb 1, 2025</td>
+                        <td valign="top" align="center"><strong>SAILS</strong><br>⛵️</td>
+                        <td align="center" valign="top">4.90</td>
+                        <td align="left" valign="top">In Kelowna, British Columbia, the <a href="https://www.kelowna.ca/our-community/arts-culture-heritage/public-art/public-art-collection-listing/spirit-sail" target="_blank">Spirit of Sail</a> - affectionately known as The Sails - is an iconic sculpture that has become a symbol of the community. Designed by artist Robert Dow Reid and unveiled in 1978, this towering artwork stands 12 metres tall and weighs an impressive 1,820 kilograms. Located along Kelowna's waterfront, it beautifully captures the spirit of the Okanagan's connection to its lake and outdoor lifestyle. Next time you're in Kelowna, stop by for a photo - it's a must-see Canadian landmark!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1886051022147391953" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">995</td>
+                        <td valign="top" align="center">Feb 2, 2025</td>
+                        <td valign="top" align="center"><strong>RHINO</strong><br>🦏</td>
+                        <td align="center" valign="top">3.97</td>
+                        <td align="left" valign="top">Did you know Canada once had a political party called the <a href="https://www.partyrhino.ca/" target="_blank">Rhinoceros Party of Canada</a>? Founded in 1963, it became famous for its satirical and humorous platform. The party proposed outrageous policies like repealing the law of gravity and banning lousy Canadian winters. While they never gained significant political power, the party remains a quirky part of Canadian political history, known for mocking traditional politics and using humour to encourage people to think about the system in a new way.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1886394938688254285" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">996</td>
+                        <td valign="top" align="center">Feb 3, 2025</td>
+                        <td valign="top" align="center"><strong>LUMEN</strong><br>💡❄️🔉</td>
+                        <td align="center" valign="top">4.39</td>
+                        <td align="left" valign="top"><a href="https://www.canada.ca/en/canadian-heritage/campaigns/winterlude.html" target="_blank">Winterlude</a> is underway in Ottawa and Gatineau, and this year's festivities feature <a href="https://www.canada.ca/en/canadian-heritage/campaigns/winterlude/calendar-events/events.html?id=799" target="_blank">Lumen Eira</a> - a mesmorizing illumination experience animating Confederation Park. This dazzling display blends light and sound, transforming the park into a winter wonderland after dark. Trees glow and pulse with colours synchronized to custom soundscapes, inspired by nature and imagination. Let the interplay of light, sound, and winter's magic draw you into a world where reality is suspended, and imagination takes centre stage!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1886746415595962837" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">997</td>
+                        <td valign="top" align="center">Feb 4, 2025</td>
+                        <td valign="top" align="center"><strong>AGATE</strong><br>🪨</td>
+                        <td align="center" valign="top">4.87</td>
+                        <td align="left" valign="top">Canada is home to stunning agates, including the famous Thunder Bay Agate, known for its deep red and orange hues from iron oxidation! These colourful nodules form in volcanic rock and can be found along Lake Superior's north shore, as well as in British Columbia, Alberta, and the Maritimes. Rockhounds love hunting for these hidden gems - finding an agate is like holding a piece of Earth's history in your hand!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1887104600441839816" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">998</td>
+                        <td valign="top" align="center">Feb 5, 2025</td>
+                        <td valign="top" align="center"><strong>URSON</strong><br>🦔</td>
+                        <td align="center" valign="top">4.73</td>
+                        <td align="left" valign="top">The urson, also called the tree-porcupine or bear-porcupine, is Canada's only quill-covered climber! With sharp claws and a sturdy tail for balance, it spends much of its time in trees, nibbling on bark and buds. Despite its slow and gentle nature, this prickly creature is well-defended - its 30,000 barbed quills make predators think twice before getting too close! Found across Canada's forests, the urson is a true expert in both climbing and self-defence.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1887484542333911218" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">999</td>
+                        <td valign="top" align="center">Feb 6, 2025</td>
+                        <td valign="top" align="center"><strong>WAXER</strong><br>🏒</td>
+                        <td align="center" valign="top">6.47</td>
+                        <td align="left" valign="top">The Markham Waxers were an Ontario Junior Hockey League (OJHL) Junior "A" ice hockey team based in Markham, Ontario. Originally known as the Markham Jets, the Waxers organization changed names in 1961, named after The International Group, a privately owned wax and oil refinery that originated in Agincourt, Ontario. At one point, the Waxers were the farm team of the National Hockey League's Toronto Maple Leafs and boasts over 100 NHL and World Hockey Association graduates. The Waxers name is still used by the <a href="https://waxers.com/" target="_blank">Markham Waxers</a> minor hockey club.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1887844803737452748" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">1000</td>
+                        <td valign="top" align="center">Feb 7, 2025</td>
+                        <td valign="top" align="center"><strong>MILLE</strong><br>🍰</td>
+                        <td align="center" valign="top">4.70</td>
+                        <td align="left" valign="top">The mille-feuille, a classic French dessert with delicate layers of flaky puff pastry and creamy filling, is the perfect treat to celebrate Canuckle's 1000th puzzle! While it originated in France, this elegant dessert has become a beloved treat in Canada, especially in Quebec, where French culinary traditions thrive. Just like the mille-feuille, Canuckle's journey has been all about layers - one puzzle at a time, revealing more about Canada with every step. Thank you for being part of this milestone moment. Here's to many more puzzles to savour!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1888238342451409344" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
 
 
 
@@ -9353,6 +9433,17 @@
                   <tr><td align="center" valign="top">988</td><td align="center" valign="top"><strong>MUDDY</strong></td></tr>
                   <tr><td align="center" valign="top">989</td><td align="center" valign="top"><strong>KIOSK</strong></td></tr>
                   <tr><td align="center" valign="top">990</td><td align="center" valign="top"><strong>JACKS</strong></td></tr>
+
+                  <tr><td align="center" valign="top">991</td><td align="center" valign="top"><strong>REEVE</strong></td></tr>
+                  <tr><td align="center" valign="top">992</td><td align="center" valign="top"><strong>TUNIC</strong></td></tr>
+                  <tr><td align="center" valign="top">993</td><td align="center" valign="top"><strong>WIRED</strong></td></tr>
+                  <tr><td align="center" valign="top">994</td><td align="center" valign="top"><strong>SAILS</strong></td></tr>
+                  <tr><td align="center" valign="top">995</td><td align="center" valign="top"><strong>RHINO</strong></td></tr>
+                  <tr><td align="center" valign="top">996</td><td align="center" valign="top"><strong>LUMEN</strong></td></tr>
+                  <tr><td align="center" valign="top">997</td><td align="center" valign="top"><strong>AGATE</strong></td></tr>
+                  <tr><td align="center" valign="top">998</td><td align="center" valign="top"><strong>URSON</strong></td></tr>
+                  <tr><td align="center" valign="top">999</td><td align="center" valign="top"><strong>WAXER</strong></td></tr>
+                  <tr><td align="center" valign="top">1000</td><td align="center" valign="top"><strong>MILLE</strong></td></tr>
 
                </tbody>
             </table>
